Corrected the navbar sttings

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,16 +9,16 @@
   <br>
   <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#product">Product Pitch</a>
+      <a class="nav-link active" data-toggle="tab" href="#product">Product</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#interview">Interview Pitch</a>
+      <a class="nav-link" data-toggle="tab" href="#interview">Interview</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#pickupline">Pickupline Pitch</a>
+      <a class="nav-link" data-toggle="tab" href="#pickupline">Pickupline</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#promotion">Promotion Pitch</a>
+      <a class="nav-link" data-toggle="tab" href="#promotion">Promotion</a>
     </li>
   </ul>
 
