--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,6 @@
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container-fluid">
+
+<div class="navbar navbar-dark bg-primary" role="navigation">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
@@ -7,20 +8,34 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> One Minute Pitch </a>
+            <ul>
+            <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/pitches/new/"> CLICK TO PICTH</a>
+            </ul>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                    <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-                    <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
-                    {% else %}
-                    <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
-                    {%endif%}
-                  </ul>
+        <div class="navbar-nav">
+            <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/"> Home </a>
+
         </div>
 
-    </div>
+        <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          {% if current_user.is_authenticated %}
+          <li style="color:whitesmoke">{{current_user.username}}</li>
+          <li><a style="color: whitesmoke;"  href="{{url_for('auth.logout')}}">Sign out</a></li>
+          {% else %}
+          <li><a style="color: whitesmoke;" href="{{url_for('auth.login')}}">Sign in</a></li>
+          {%endif%}
+        </ul>
+      </div>
+
+
+      <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li style="color:whitesmoke"></li>
+            <li><a style="color: whitesmoke;"  href="{{url_for('auth.logout')}}"></a></li>
+            <li><a style="color: whitesmoke;" href="{{url_for('auth.login')}}"></a></li>
+          </ul>
+        </div>
+      
+</div>
 </div>
