--- a/app/templates/pitches.html
+++ b/app/templates/pitches.html
@@ -4,6 +4,7 @@
 
 
 {% block content %}
+<section class="bg-secondary">
 <div class="container">
 	<div class="row">
 		<div class="jumbotron">
@@ -24,3 +25,5 @@
 		</div>
 	</div>
 </div>
+</section>
+{% endblock %}
